loco-gen/src/snapshots/loco_gen__template_engine__tests__can_render_form_field_[form_small_unsigned^_small_unsigned^].snap
---
source: loco-gen/src/template_engine.rs
expression: "format!(\"Crete form\\n\\r{create_form}\\n\\rEdit Form\\n\\r{edit_form}\")"
---
Crete form
<div class="space-y-2">
    <label class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70" for=":r2l:-form-item">small_unsigned^</label>
    <input class="flex h-9 w-full rounded-md border border-input bg-transparent px-3 py-1 text-base shadow-sm md:text-sm" min="-32768" max="32767" id="small_unsigned^" name="small_unsigned^" type="number" value="" required step="1" />
</div>
Edit Form
<div class="space-y-2">
    <label class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70" for=":r2l:-form-item">small_unsigned^</label>
    <input class="flex h-9 w-full rounded-md border border-input bg-transparent px-3 py-1 text-base shadow-sm md:text-sm" min="-32768" max="32767" id="small_unsigned^" name="small_unsigned^" type="number" value="{{item.small_unsigned^}}" required step="1" />
</div>
